<resources>
    <string name="app_name">Secret Android Course</string>

    <string name="title_country">italy</string>
    <string name="title_city">rome</string>
    <string name="title_description">is a historical powerhouse</string>
    <string name="title_local_time">local time</string>
    <string name="title_time">10:23 am</string>
    <string name="title_date">12/09/2019</string>
    <string name="title_today">today</string>
    <string name="title_degree">-2°c</string>
    <string name="title_state_weather">Scattered clouds</string>
    <string name="title_attractions">Attractions</string>
    <string name="title_need_to_know">Need to know</string>
    <string name="title_more">More</string>
    <string name="title_parameters">Physical Parameters</string>
    <string name="title_biography">Biography</string>
    <string name="label_description">Saina Nehwal is an Indian professional badminton player.
        A former world no. 1, she has won 24 international titles, which includes ten Superseries titles.
        Although she reached the world\'s 2nd in 2009, it was only in 2015 that she was able to attain the world.
    </string>
    <string name="title_player_name">Saina Nehwal</string>
    <string name="title_player_description">Indian badminton player</string>
    <string name="title_game_value">30</string>
    <string name="title_game">Game</string>
    <string name="title_minutes_value">2400</string>
    <string name="title_minutes">Minutes</string>
    <string name="title_shots_value">16</string>
    <string name="title_shots">Shots</string>
    <string name="title_assists_value">13</string>
    <string name="title_assists">Assists</string>
    <string name="title_wins_value">20</string>
    <string name="title_wins">Wins</string>
    <string name="title_height_value">1.80m</string>
    <string name="title_height">Height</string>
    <string name="title_weight_value">60kg</string>
    <string name="title_weight">Weight</string>
    <string name="title_age_value">32 Yrs</string>
    <string name="title_age">Age</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="welcome_back">Welcome\nback</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="or_continue_as_guest">or continue as Guest</string>
    <string name="email">Email</string>

</resources>