<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/main_image">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/countryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/title_country"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/title_city"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="@string/title_description"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/localTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/title_local_time"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/timeTextView"
                    app:layout_constraintStart_toStartOf="@+id/timeTextView" />

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/title_time"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toTopOf="@+id/dateTextView"
                    app:layout_constraintStart_toStartOf="@+id/dateTextView" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title_date"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/mainImageView"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todayTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="end"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/title_today"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/degreeTextView"
                    app:layout_constraintEnd_toEndOf="@id/degreeTextView" />

                <TextView
                    android:id="@+id/degreeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="end"
                    android:fontFamily="sans-serif"
                    android:text="@string/title_degree"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toTopOf="@id/stateWeather"
                    app:layout_constraintEnd_toEndOf="@id/stateWeather" />

                <TextView
                    android:id="@+id/stateWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="end"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title_state_weather"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/mainImageView"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/title_attractions"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:letterSpacing="0"
            app:icon="@drawable/ic_attractions"
            app:iconGravity="textTop"
            app:iconTint="@color/black" />

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E6E6E6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/title_need_to_know"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:letterSpacing="0"
            app:icon="@drawable/ic_need_to_know"
            app:iconGravity="textTop"
            app:iconTint="@color/black" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E6E6E6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/title_more"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:letterSpacing="0"
            app:icon="@drawable/ic_more"
            app:iconGravity="textTop"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>